<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_setting"
        android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:title="@string/language"></item>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notification"></item>
        </menu>
    </item>

    <item
        android:id="@+id/nav_option"
        android:title="@string/option">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_friend"></item>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"></item>
            <item
                android:id="@+id/feedback_error"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback_error"></item>
        </menu>
    </item>

    <item
        android:id="@+id/nav_admin"
        android:title="@string/use_dev">
        <menu>
            <item
                android:id="@+id/connect_wifi"
                android:icon="@drawable/ic_wifi"
                android:title="@string/connect_device_wifi"></item>
            <item
                android:id="@+id/signIn_dev"
                android:icon="@drawable/ic_developer_mode"
                android:title="@string/signin_for_dev"></item>
        </menu>
    </item>

    <item
        android:id="@+id/bt_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>

</menu>