<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:background="@color/colorDialogLanguage"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:layout_marginBottom="25dp"
        android:id="@+id/tv"
        android:text="@string/choose_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <RelativeLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/tv"
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="20sp"
                android:text="@string/vietnamese"
                android:id="@+id/lang_viet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>

            <RadioButton
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/english"
                android:id="@+id/lang_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </RadioButton>
        </RadioGroup>

        <ImageView
            android:id="@+id/vn"
            android:layout_alignParentRight="true"
            android:src="@drawable/vietnam"
            android:layout_width="30dp"
            android:layout_height="30dp">
        </ImageView>

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_below="@+id/vn"
            android:layout_alignParentRight="true"
            android:src="@drawable/english"
            android:layout_width="30dp"
            android:layout_height="30dp">
        </ImageView>
    </RelativeLayout>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/linear1"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:textColor="@color/text_white"
        android:background="@drawable/custom_button_view_details"
        android:layout_gravity="center"
        android:id="@+id/buttonChooseLanguage"
        android:text="OK"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
    </Button>

</RelativeLayout>