<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/lab"
            android:layout_width="120dp"
            android:layout_height="80dp">
        </ImageView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/textviewStatus"
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="SSID: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/textviewSSID"
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="BSSID: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/textviewBSSID"
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="Password: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/edittextPassWifi"
                android:layout_marginLeft="45dp"
                android:hint="@string/passwifi"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/device_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <EditText
                android:text="1"
                android:inputType="number"
                android:id="@+id/edittextDeviceCount"
                android:layout_marginLeft="10dp"
                android:hint="@string/enter_number"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:text="Giao thức: Broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="Thông báo: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:textColor="#000"
                android:textSize="15sp"
                android:id="@+id/textviewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="ESPTOUCH_VERSION: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                android:id="@+id/textviewEsptouchVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/buttonConfirmConfig"
            android:textColor="#16AAE0"
            android:background="@drawable/custom_confirm"
            android:text="@string/confirm"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

        <Button
            android:id="@+id/buttonBackConfig"
            android:textColor="#8C8F91"
            android:background="@drawable/custom_back"
            android:text="@string/back"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

    </LinearLayout>

</ScrollView>